# genjax

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .nojekyll  .pre-commit-config.yaml  .zenodo.json  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml  robots.txt  run_faircoin_timing.py  search.json  sitemap.xml  test_import_check.py
.claude/: CLAUDE.md
.claude/commands/: README.md  alex.md  chikhai-bardo.md  doctor.md  feras.md  george.md  improver.md  mccoy.md  nadieh.md  reflection.md  renoir.md  shifu.md
.github/workflows/: README.md  claude-code-review.yml  claude-pr-review.yml  claude-specialized-review.yml  claude.yml  coverage.yml  docs.yml  test.yml
advanced/gradient-estimators/: index.html
api/distributions/: index.html
api/overview/: index.html
docs/: index.md
examples/: AGENTS.md  CLAUDE.md  CUDA_COMPATIBILITY.md  __init__.py  adev.py  game_of_life.py  marginal.py  regression.py  simple.py  utils.py  vi.py
examples/curvefit/: AGENTS.md  CLAUDE.md  README.md  core.py  data.py  debug_is.py  export.py  figs.py  figures.py  importance_sampling_analysis.md  importance_sampling_solutions.py  main.py  numpyro_impl.py  pyproject.toml  pyro_impl.py  test_easy_inference.py  visualize_weight_degeneracy.py
examples/curvefit/archive/: CLAUDE_original.md  CLAUDE_verbose.md  figs_original.py
examples/gol/: .gitignore  AGENTS.md  CLAUDE.md  README.md  core.py  data.py  dataloading.py  export_figures.py  figs.py  main.py  pyproject.toml  run_1024_experiment.py  time_scaling.py
examples/gol/archive/: CLAUDE_verbose.md
examples/localization/: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_isolated.md  __init__.py  core.py  data.py  figs.py  main.py  pyproject.toml
examples/localization/archive/: CLAUDE_verbose.md  main_original.py
examples/perfbench/: AGENTS.md  README.md  main.py  pyproject.toml
examples/perfbench/benchmarks/: combine_results.py  run_genjl_hmc.py  run_hmc_benchmarks.py
examples/perfbench/benchmarks/julia/: Manifest.toml  Project.toml
examples/perfbench/benchmarks/julia/src/: TimingBenchmarks.jl  polynomial_regression.jl  polynomial_regression_dynamic.jl
examples/perfbench/benchmarks/src/timing_benchmarks/: julia_interface.py
examples/perfbench/benchmarks/src/timing_benchmarks/curvefit_benchmarks/: __init__.py  genjax.py  genjl.py  handcoded_jax.py  handcoded_torch.py  numpyro.py  pyro.py  pyro_cli.py  timing_utils.py
examples/perfbench/benchmarks/src/timing_benchmarks/data/: __init__.py  generation.py
examples/timing-benchmarks/: CLAUDE.md  GENJL_HMC_SUMMARY.md  README.md  add_handcoded_hmc.py  add_torch_hmc.py  analyze_gpu_results.py  check_pyro_is.py  combine_gibbs_results.py  combine_handcoded_results.py  combine_results.py  compare_implementations.py  debug_is_plot.py  diagnose_overhead.py  generate_hmc_test_data.py  plot_gpu_results.py  profile_hmc_performance.py  pyproject.toml  run_all_curvefit.sh  run_all_frameworks_gpu.py  run_all_hmc_benchmarks.sh  run_genjl_hmc.py  run_hmc_benchmarks.py  run_hmc_test.py  run_hmc_test.sh  run_numpyro_hmc_fixed.sh  run_pyro_hmc.py  run_pyro_hmc_direct.py  run_torch_hmc.py  run_torch_hmc_direct.py  run_torch_hmc_optimized.py  run_torch_hmc_optimized_v2.py  setup.py  test_genjax_hmc.sh  test_genjl_hmc.py  test_genjl_hmc_quick.py  test_gpu_hmc.py  test_hmc.py  test_hmc_correctness.py  test_hmc_simple.py  test_hmc_with_genjl.sh  (+3 more)
examples/timing-benchmarks/archive/: CLAUDE_original.md
examples/timing-benchmarks/archive/figs_original/: benchmark_summary_20250707_193445.csv  benchmark_summary_20250707_193515.csv  benchmark_summary_20250707_193720.csv  benchmark_summary_20250707_194730.csv  benchmark_summary_20250707_194916.csv  benchmark_summary_20250707_200257.csv  benchmark_summary_20250707_202256.csv  benchmark_summary_20250707_203850.csv  benchmark_summary_20250707_205012.csv  benchmark_summary_20250707_210730.csv  benchmark_summary_20250707_211031.csv  benchmark_summary_20250707_212911.csv  benchmark_summary_20250707_213412.csv  benchmark_summary_20250707_215546.csv  benchmark_summary_20250707_215834.csv  benchmark_summary_20250707_220906.csv  benchmark_summary_20250707_221941.csv  benchmark_summary_20250707_222450.csv  benchmark_summary_20250707_222844.csv  benchmark_summary_20250707_224646.csv  benchmark_summary_20250707_224820.csv  benchmark_summary_20250707_225908.csv  benchmark_table.tex
examples/timing-benchmarks/julia/: Manifest.toml  Project.toml
examples/timing-benchmarks/julia/src/: TimingBenchmarks.jl  improved_polynomial_benchmark.jl  polynomial_regression.jl  utils.jl
examples/timing-benchmarks/src/timing_benchmarks/: __init__.py  generate_curvefit_data.py  julia_interface.py  main.py
examples/timing-benchmarks/src/timing_benchmarks/analysis/: __init__.py  combine.py
examples/timing-benchmarks/src/timing_benchmarks/benchmarks/: __init__.py  genjax.py  genjl.py  handcoded_tfp.py  numpyro.py  pyro.py
examples/timing-benchmarks/src/timing_benchmarks/curvefit-benchmarks/: genjax.py  genjax_optimized.py  handcoded_tfp.py  numpyro.py  pyro.py  pyro_cli.py  timing_utils.py
examples/timing-benchmarks/src/timing_benchmarks/export/: __init__.py  results.py
examples/timing-benchmarks/src/timing_benchmarks/handcoded_benchmarks/: __init__.py  genjax_handcoded.py  gmm_benchmarks.py  gmm_is_benchmarks.py  gmm_torch_benchmarks.py  jax_handcoded.py  main.py  timing_utils.py  torch_handcoded.py  visualization.py
examples/timing-benchmarks/src/timing_benchmarks/visualization/: __init__.py  plots.py
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: AGENTS.md  CLAUDE.md  conftest.py  discrete_hmm.py  test_adev.py  test_air_example.py  test_benchmarks.py  test_cone_example.py  test_core.py  test_discrete_hmm.py  test_discrete_hmm_tfp.py  test_distributions.py  test_gp.py  test_gp_invariants.py  test_mcmc.py  test_mvnormal_estimators.py  test_pjax.py  test_smc.py  test_state.py  test_stdlib.py  test_vi.py  test_vmap_rejuvenation_smc.py
(+145 files in other folders)
